# Information-Theory-Vicsek-Model

./: CITATION.cff  CMakeLists.txt  EnableCPP11.cmake  readme.md  writeVersion.bat  writeVersion.sh
include/: anim_utils.hpp  connectedFlocks.hpp  dataSet.hpp  dataSetBruteForce.hpp  defs.hpp  itHistograms.hpp  ksgControl.hpp  logFileHelper.hpp  metricTests.hpp  metrics.hpp  model.hpp  nearestNeighbour.hpp  psi.hpp  stats.hpp  utils.hpp  version.hpp  vpTree.hpp  vpUtil.hpp
src/: anim_utils.cpp  connectedFlocks.cpp  dataSet.cpp  defs.cpp  itHistograms.cpp  ksgFlockParticleControl.cpp  ksgLocalInteractionsControl.cpp  ksgPairwiseControl.cpp  ksgSubsetControl.cpp  ksgWholeSeriesControl.cpp  logFileHelper.cpp  metricTests.cpp  model.cpp  nearestNeighbour.cpp  psi.cpp  sim_all.cpp  sim_all_threaded.cpp  sim_anim.cpp  sim_generate.cpp  sim_generate_threaded.cpp  sim_record.cpp  sim_singleflock.cpp  sim_test.cpp  sim_visualize.cpp  stats.cpp  utils.cpp  vicsek.cpp
tools/processing_results/: calc_data.m  centropy.m  check_magic.m  display_data.m  domatlab.sh  entropy.m  extract.sh  get_files.m  read_data.m  startup.m  unpack.sh
tools/running_model/: batchRun.sh  singleRun.sh
unit_tests/: angle_util_tests.cpp  connected_sets_tests.cpp  ksg_tests.cpp  shuffling_util_tests.cpp  vicsek_model_tests.cpp
